static/style.css
html
{
	box-sizing: border-box;
	height: 98%;
}

*, *:before, *:after
{
	box-sizing: border-box;
}

body
{
	height: 100%;
	background-color: #333;
}

.border
{
	border: 2px solid;
	border-radius: 10px;
	width: 100%;
	height: 100%;
}

#content
{
	height: 100%;
}

#chatbox
{
	height: calc(100% - 50px);
}

#chatbox-border
{
	background-color: #666;
}

#chatbox-content
{
	margin: 10px;
	color: #ccc;
}

#inputbox
{
	margin-top: 10px;
	position: relative;
	top: 5px;
}

#inputbox-border
{
	background-color: #666;
}

#inputbox-content
{
	margin: 5px;
	padding-right: 5px;
	width: calc(100% - 10px);
	background-color: #666;
	color: #ccc;
	border: 0;
}

